Footer not in use because of vertical spacing issues, fixed table horizontal overflow though

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -420,3 +420,7 @@ span {
   text-align: left;
   padding-left: 0;
 }
+
+.nes-table-responsive {
+  overflow-x: hidden;
+}
